tests/spec/emit/snapshots/or_pattern_let_else_binding_shadowing.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  fn maybe() -> Option<int> { Some(1) }
  
  fn main() {
    let Some(x) | Some(x) = maybe() else { return };
    let _ = x;
    let x = 2;
    let _ = x;
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func maybe() (int, bool) {
	return 1, true
}

func main() {
	option := lisette.OptionFromCommaOk[int](maybe())
	var x int
	if option.Tag == lisette.OptionSome {
		x = option.SomeVal
	} else if option.Tag == lisette.OptionSome {
		x = option.SomeVal
	} else {
		return
	}
	_ = x
}
