tests/spec/emit/snapshots/or_pattern_let_else_on_go_interface_per_alternative_comma_ok.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/shapes"
  
  fn area_or_neg(s: shapes.Shape) -> int {
    let shapes.Rect { W: w, H: h } | shapes.Box { width: w, height: h } = s else { return -1 }
    w * h
  }
---
package main

import "example.com/shapes"

func areaOrNeg(s shapes.Shape) int {
	var w int
	var h int
	asserted, ok := s.(shapes.Rect)
	asserted_1, ok_1 := s.(shapes.Box)
	if ok {
		w = asserted.W
		h = asserted.H
	} else if ok_1 {
		w = asserted_1.Width
		h = asserted_1.Height
	} else {
		return -1
	}
	return w * h
}
