tests/spec/emit/snapshots/or_pattern_let_else_rest_shadow.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:fmt"
  
  fn main() {
    let rest = [99]
    fmt.Println(rest[0])
    let [x, ..rest] | [x, ..rest] = [1, 2] else {
      return
    }
    fmt.Println(x, rest[0])
  }
---
package main

import "fmt"

func main() {
	rest := []int{99}
	fmt.Println(rest[0])
	subject := []int{1, 2}
	var x int
	var rest_1 []int
	if len(subject) >= 1 {
		x = subject[0]
		rest_1 = subject[1:]
	} else if len(subject) >= 1 {
		x = subject[0]
		rest_1 = subject[1:]
	} else {
		return
	}
	fmt.Println(x, rest_1[0])
}
