tests/spec/emit/snapshots/or_pattern_let_else_shadow.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  enum E { A(int), B(int), C }
  
  fn test(e: E) -> int {
    let x = 1
    let E.A(x) | E.B(x) = e else { return 0; };
    x
  }
---
package main

func MakeEA(arg0 int) E {
	return E{Tag: EA, A: arg0}
}

func MakeEB(arg0 int) E {
	return E{Tag: EB, B: arg0}
}

func MakeEC() E {
	return E{Tag: EC}
}

type ETag uint8

const (
	EA ETag = iota
	EB
	EC
)

type E struct {
	Tag ETag
	A   int
	B   int
}

func test(e E) int {
	var x int
	if e.Tag == EA {
		x = e.A
	} else if e.Tag == EB {
		x = e.B
	} else {
		return 0
	}
	return x
}
