tests/spec/emit/snapshots/or_pattern_literals.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(x: int) -> string {
    match x {
      1 | 2 | 3 => "small",
      4 | 5 | 6 => "medium",
      _ => "large",
    }
  }
---
package main

func test(x int) string {
	if x == 1 || x == 2 || x == 3 {
		return "small"
	} else if x == 4 || x == 5 || x == 6 {
		return "medium"
	}
	return "large"
}
