tests/spec/emit/snapshots/or_pattern_on_go_interface_emits_combined_case_label.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> int {
    match e {
      events.KeyPress { .. } | events.KeyRelease { .. } => 1,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e.(type) {
	case events.KeyPress, events.KeyRelease:
		return 1
	default:
		return 0
	}
}
