tests/spec/emit/snapshots/or_pattern_on_go_interface_with_three_alternatives.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/events"
  
  fn handle(e: events.Event) -> int {
    match e {
      events.Click { .. } | events.KeyPress { .. } | events.Resize { .. } => 1,
      _ => 0,
    }
  }
---
package main

import "example.com/events"

func handle(e events.Event) int {
	switch e.(type) {
	case events.Click, events.KeyPress, events.Resize:
		return 1
	default:
		return 0
	}
}
